sort and filtering working

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -120,9 +120,7 @@
         ><img class="h-5" src="../assets/icons/media/github-mark.svg"
       /></a>
       <a href="https://discord.gg/sQUEBW4UVx" target="_blank"
-        ><img
-          class="h-5"
-          src="../assets/icons/media/discord-mark-blue copy.svg"
+        ><img class="h-5" src="../assets/icons/media/discord-mark-blue.svg"
       /></a>
     </div>
   </footer>
