--- a/src/app/draft-overview/draft-form/draft-form-core/draft-form-core.component.html
+++ b/src/app/draft-overview/draft-form/draft-form-core/draft-form-core.component.html
@@ -102,7 +102,7 @@
         <textarea
           #textAreaInfo
           spellcheck="false"
-          class="w-2/3 p-2 rounded resize-none h-96 max-w-128"
+          class="w-2/3 p-2 bg-page rounded resize-none h-96 max-w-128"
           placeholder="Deoxys&#10;Minior&#10;Clefable&#10;..."
         ></textarea>
       </div>
