--- a/src/app/league-list/league-list.component.html
+++ b/src/app/league-list/league-list.component.html
@@ -1,4 +1,4 @@
-<div class="p-6 bg-page min-h-screen">
+<div class="p-6 bg-page">
   <div class="flex justify-between items-center mb-6">
     <h1 class="text-2xl font-bold font-nasa">Open Leagues</h1>
 
@@ -13,38 +13,61 @@
 
       <!-- My Leagues Button -->
       <button
-        class="px-4 py-2 bg-menu-500 text-symbolColor-inverted rounded-md shadow hover:bg-menu-600"
+        class="px-4 py-2 bg-menu-500 text-symbolColor-disabled rounded-md shadow"
       >
         My Leagues
       </button>
     </div>
   </div>
   <div class="flex justify-between items-center text-sm font-semibold mb-2">
-    <div>Results: 3</div>
+    <div>
+      <ng-container *ngIf="filteredLeagues"
+        >Results: {{ filteredLeagues.length }}</ng-container
+      >
+    </div>
     <div class="flex space-x-4 items-center">
       <!-- Filter Button -->
 
-      <div (click)="toggleFilterBox()" class="h-6 aspect-square">
+      <div (click)="toggleMenu('filter')" class="h-6 aspect-square">
         <filter-svg></filter-svg>
       </div>
       <!-- Sort Options -->
 
-      <div (click)="toggleFilterBox()" class="h-6 aspect-square">
-        <sort-down-svg></sort-down-svg>
+      <div class="relative h-6 aspect-square">
+        <sort-down-svg (click)="toggleMenu('sort')"></sort-down-svg>
+        <!-- Sort Box (initially hidden) -->
+        <div
+          *ngIf="menu === 'sort'"
+          class="absolute top-6 right-0 bg-page p-2 shadow-lg rounded-lg w-72"
+        >
+          <div class="">
+            <label class="block text-sm font-bold mb-1">Sort</label>
+            <select
+              [(ngModel)]="sortOption"
+              class="w-full bg-page p-2 border rounded-md"
+            >
+              <option value="createdAt">Created At</option>
+              <option value="closesAt">Closes At</option>
+            </select>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 
   <!-- Filter Box (initially hidden) -->
   <div
-    *ngIf="isFilterBoxOpen"
-    class="absolute top-20 right-6 bg-white p-4 shadow-lg rounded-lg w-72"
+    *ngIf="menu === 'filter'"
+    class="absolute top-20 right-6 bg-page p-4 shadow-lg rounded-lg w-72"
   >
     <h3 class="text-lg font-semibold mb-4">Filter Options</h3>
 
     <div class="mb-4">
       <label class="block text-sm font-bold text-menu-600 mb-1">Format</label>
-      <select [(ngModel)]="filter.format" class="w-full p-2 border rounded-md">
+      <select
+        [(ngModel)]="filter.format"
+        class="w-full bg-page p-2 border rounded-md"
+      >
         <option value="">Any</option>
         <option *ngFor="let format of formats" [value]="format">
           {{ format }}
@@ -54,7 +77,10 @@
 
     <div class="mb-4">
       <label class="block text-sm font-bold text-menu-600 mb-1">Ruleset</label>
-      <select [(ngModel)]="filter.ruleset" class="w-full p-2 border rounded-md">
+      <select
+        [(ngModel)]="filter.ruleset"
+        class="w-full bg-page p-2 border rounded-md"
+      >
         <option value="">Any</option>
         <option *ngFor="let ruleset of rulesets" [value]="ruleset">
           {{ ruleset }}
@@ -66,7 +92,7 @@
       <label class="block text-sm font-bold text-menu-600 mb-1">Platform</label>
       <select
         [(ngModel)]="filter.platform"
-        class="w-full p-2 border rounded-md"
+        class="w-full bg-page p-2 border rounded-md"
       >
         <option value="">Any</option>
       </select>
@@ -78,9 +104,13 @@
       >
       <select
         [(ngModel)]="filter.skillLevel"
-        class="w-full p-2 border rounded-md"
+        class="w-full p-2 bg-page border rounded-md"
       >
-        <option value="">Any</option>
+        <option value="any">Any</option>
+        <option value="0">Amateur</option>
+        <option value="1">Intermediate</option>
+        <option value="2">Advanced</option>
+        <option value="3">Expert</option>
       </select>
     </div>
 
@@ -101,9 +131,11 @@
   </div>
 
   <!-- League Ads List -->
-  <league-ad
-    [league]="league"
-    [index]="i"
-    *ngFor="let league of filteredLeagues; let i = index"
-  ></league-ad>
+  <div class="flex flex-col px-2 space-y-6">
+    <league-ad
+      [league]="league"
+      [index]="i"
+      *ngFor="let league of filteredLeagues; let i = index"
+    ></league-ad>
+  </div>
 </div>
