fix + svg not showing

--- a/src/app/draft-overview/draft-preview/draft-preview.component.html
+++ b/src/app/draft-overview/draft-preview/draft-preview.component.html
@@ -134,7 +134,7 @@
       class="flex items-center p-1 rounded-lg shadow-md bg-aTeam-300 hover:shadow shadow-aTeam-600"
       title="Add League"
     >
-      <plus-svg class="w-8"></plus-svg>
+      <plus-svg class="w-8 stroke-symbolColor-main"></plus-svg>
     </button>
     <div class="flex-grow"></div>
     <button
