--- a/src/app/league-list/league-list.component.html
+++ b/src/app/league-list/league-list.component.html
@@ -8,7 +8,7 @@
         routerLink="new"
         class="h-10 w-10 bg-menu-500 stroke-symbolColor-inverted rounded-md flex justify-center items-center shadow hover:bg-menu-600"
       >
-        <plus-svg class="h-5 w-5"></plus-svg>
+        <plus-svg class="h-5 w-5 stroke-symbolColor-main"></plus-svg>
       </button>
 
       <!-- My Leagues Button -->
