--- a/src/app/matchup-overview/matchup/movechart/move-category/move-category.component.html
+++ b/src/app/matchup-overview/matchup/movechart/move-category/move-category.component.html
@@ -9,7 +9,11 @@
     class="items-center justify-end w-4 h-4 m-2 ml-auto border rounded cursor-pointer border-menu-500 bg-menu-400 hover:bg-menu-200"
   >
     <minus-svg *ngIf="show" class="h-full" title="Hide"></minus-svg>
-    <plus-svg *ngIf="!show" class="h-full" title="Expand"></plus-svg>
+    <plus-svg
+      *ngIf="!show"
+      class="h-full stroke-symbolColor-main"
+      title="Expand"
+    ></plus-svg>
   </div>
 </div>
 
