--- a/src/app/planner/planner.component.html
+++ b/src/app/planner/planner.component.html
@@ -28,9 +28,9 @@
         </div>
         <button *ngIf="draftSize < 5" (click)="addDraft()" c>
           <div
-            class="h-8 w-8 p-1 border rounded border-menu-500 bg-menu-100 hover:bg-menu-50 hover:cursor-pointer"
+            class="h-8 aspect-square p-1 border rounded border-menu-500 bg-menu-100 hover:bg-menu-50 hover:cursor-pointer"
           >
-            <plus-svg></plus-svg>
+            <plus-svg class="stroke-symbolColor-main"></plus-svg>
           </div>
         </button>
       </div>
