fix router typo and update news

--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -50,6 +50,24 @@
       <h2 class="pb-2 text-2xl font-bold">News and Updates</h2>
       <ul class="space-y-3">
         <li>
+          <h2 class="text-xl font-semibold">October 4th, 2024</h2>
+          <h3 class="pl-4">
+            <div>
+              Looking for a new draft league to join? Check out the
+              <a
+                href="https://pokemondraftzone.com/league-list"
+                class="font-semibold text-blue-500"
+                >Find A League</a
+              >
+              page for a list of draft leagues and tournaments currently looking
+              for participants! Quicky filter to find the perfect league for
+              your skill level and interests. Want to advertise your own
+              upcoming draft? Easily fill out a form and share with the
+              DraftZone community.
+            </div>
+          </h3>
+        </li>
+        <li>
           <h2 class="text-xl font-semibold">August 29th, 2024</h2>
           <h3 class="pl-4">
             <div>
