--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -56,7 +56,7 @@
               Looking for a new draft league to join? Check out the
               <a
                 href="https://pokemondraftzone.com/league-list"
-                class="font-semibold text-blue-500"
+                class="font-semibold text-blue-500 hover:text-blue-600"
                 >Find A League</a
               >
               page for a list of draft leagues and tournaments currently looking
@@ -74,7 +74,7 @@
               The
               <a
                 href="https://pokemondraftzone.com/tools/pokemon-search"
-                class="font-semibold text-blue-500"
+                class="font-semibold text-blue-500 hover:text-blue-600"
                 >Pokemon Search tool</a
               >
               has been added in the planner and as its own seperate tool. This
