--- a/src/app/opponent-overview/opponent-schedule/opponent-schedule.component.html
+++ b/src/app/opponent-overview/opponent-schedule/opponent-schedule.component.html
@@ -138,7 +138,7 @@
   </div>
   <div class="flex justify-between order-1 mb-2 md:order-2">
     <button
-      [routerLink]="'/draft/' + teamId"
+      [routerLink]="'/drafts/' + teamId"
       type="button"
       class="px-4 py-2 font-medium text-symbolColor-inverted rounded-md shadow-sm bg-menu-500 hover:bg-menu-700 focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-menu-500"
     >
